--- a/LucasNogueira.html
+++ b/LucasNogueira.html
@@ -14,8 +14,12 @@
 
 
     <h3>Aluno do IFTM, 2° ano de Informática</h3>
-    <p class="top">Gosto de jogar jogos online, jogos de azar (tigrinho e bet), ouvir músicas
+        <h2>Informações básicas</h2>   
+    <p class="top">
+
+      Tenho 16 anos, gosto de jogar jogos online, jogos de azar (tigrinho e bet), ouvir músicas
         e ficar com minha família e amigos.
+       
     </p>
     <div class="camarote">
     <img class="nog" src="img2/3a9ec75a-24ae-48ac-91db-6d07379ba078.jpeg" alt="nog">
